gccida/c3/parse_number
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_number/src/cpplex.c:984:21: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
void  parse_number( cpp_reader_0 *pfile, cpp_string_0 *number, cppchar_t c, int leading_period) 
                    ^~~~~~~~~~~~
                    cpp_reader
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_number/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_number/src/cpplex.c:984:42: error: unknown type name 'cpp_string_0'; did you mean 'cpp_string'?
void  parse_number( cpp_reader_0 *pfile, cpp_string_0 *number, cppchar_t c, int leading_period) 
                                         ^~~~~~~~~~~~
                                         cpp_string
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_number/src/cpplib.h:41:27: note: 'cpp_string' declared here
typedef struct cpp_string cpp_string;
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_number/src/cpplex.c:987:1: error: unknown type name 'cpp_buffer_0'; did you mean 'cpp_buffer'?
cpp_buffer_0 *buffer; // r12 
^~~~~~~~~~~~
cpp_buffer
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_number/src/cpplib.h:38:27: note: 'cpp_buffer' declared here
typedef struct cpp_buffer cpp_buffer;
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_number/src/cpplex.c:988:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *u_buff; // rbx 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_number/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_number/src/cpplex.c:992:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *free_buffs; // rbp 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_number/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_number/src/cpplex.c:995:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 **p_free_buffs; // rdx 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_number/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_number/src/cpplex.c:997:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *v15; // r14 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_number/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_number/src/cpplex.c:1001:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *v19; // r14 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_number/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_number/src/cpplex.c:1002:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *v20; // rbp 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_number/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_number/src/cpplex.c:1008:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 **p_next; // rcx 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_number/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_number/src/cpplex.c:1016:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *v34; // rax 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_number/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_number/src/cpplex.c:1064:29: error: expected expression
free_buffs = ( _cpp_buff_0 *)&v18[v17]; 
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_number/src/cpplex.c:1064:16: error: use of undeclared identifier '_cpp_buff_0'
free_buffs = ( _cpp_buff_0 *)&v18[v17]; 
               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_number/src/cpplex.c:1120:22: error: expected expression
v20 = ( _cpp_buff_0 *)&v29[v28]; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_number/src/cpplex.c:1120:9: error: use of undeclared identifier '_cpp_buff_0'
v20 = ( _cpp_buff_0 *)&v29[v28]; 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_number/src/cpplex.c:1137:23: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( v4 == 46 || ( sch_istable[v4] & 0x204) != 0 ); 
                      ^~~~~~~~~~~
                      _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_number/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_number/src/cpplex.c:1163:29: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( _DWORD)v4 != 46 && ( sch_istable[( unsigned __int8)v4] & 0x204) == 0 ) 
                            ^~~~~~~~~~~
                            _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_number/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parse_number/src/obj/cpplex.o] Error 1
